# lifec

./: .gitignore  Cargo.toml  README.md
examples/: workspace.rs
examples/carddeck/: Cargo.toml
examples/carddeck/examples/hilo/: Cargo.toml  example_output.txt
examples/carddeck/examples/hilo/src/: main.rs
examples/carddeck/src/: lib.rs
examples/demo/: .runmd  Cargo.toml  demo.runmd  runtime.runmd  test.sh
examples/demo/src/: main.rs
examples/demo/test/test2/: demo.runmd
examples/event_editor/: Cargo.toml  test.txt
examples/event_editor/src/: main.rs
examples/hello_runmd/: .runmd
examples/io/: .runmd
examples/os_process/azcli/: Cargo.toml
examples/os_process/demo/: .runmd  Cargo.toml  demo.runmd  drag_drop_example.runmd  node.runmd  node_editor.out  println.runmd  process.runmd  test.sh  test_demo.runmd  test_drag_drop_2.runmd  write_files.runmd
examples/os_process/echo/: Cargo.toml
examples/osprocess/: Cargo.toml
examples/osprocess/src/: lib.rs
lifec/: Cargo.toml  README.md
lifec/examples/: workspace.rs
lifec/examples/hello_runmd/: .runmd
lifec/examples/io/: .runmd
lifec/examples/v2/: example.rs  main.rs
lifec/src/: appendix.rs  debugger.rs  engine.rs  error.rs  guest.rs  host.rs  lib.rs  operation.rs  prelude.rs  project.rs  resources.rs  runtime.rs  v2.rs
lifec/src/appendix/: build.rs  general.rs  state.rs
lifec/src/editor/: canvas.rs  form.rs  host_editor.rs  mod.rs  node.rs  workspace_editor.rs
lifec/src/editor/appendix/: general.rs  state.rs
lifec/src/editor/node/: commands.rs  engine.rs  event.rs  performance.rs  wire.rs
lifec/src/engine/: adhoc.rs  cleanup.rs  command.rs  completion.rs  connection.rs  cursor.rs  event.rs  lifecycle.rs  limit.rs  performance.rs  plugins.rs  profiler.rs  profilers.rs  runner.rs  sequence.rs  sequences.rs  state.rs  status.rs  tick_control.rs  transition.rs  yielding.rs
lifec/src/engine/command/: wire.rs
lifec/src/engine/performance/: wire.rs
lifec/src/engine/plugins/: broker.rs  features.rs  listener.rs
lifec/src/guest/: remote_protocol.rs
lifec/src/host/: async_ext.rs  commands.rs  editor.rs  handler.rs  host_settings.rs  inspector.rs  sequencer.rs  start.rs  state_ext.rs
lifec/src/macros/: cfg.rs  mod.rs
lifec/src/plugins/: attributes.rs  define.rs  install.rs  mod.rs  println.rs  process.rs  publish.rs  readln.rs  remote.rs  request.rs  run.rs  timer.rs  watch.rs
lifec/src/plugins/attributes/: fmt.rs
lifec/src/plugins/events/: event_runtime.rs  journal.rs  mod.rs
lifec/src/plugins/network/: address.rs  mod.rs  proxy.rs  tcp.rs  udp.rs
lifec/src/plugins/testing/: chaos.rs  mod.rs
lifec/src/plugins/thunks/: error.rs  mod.rs  thunk_context.rs
lifec/src/plugins/thunks/thunk_context/: thunk_context_ext.rs
lifec/src/plugins/watch/: access.rs  create.rs  modify.rs  remove.rs
lifec/src/project/: listener.rs  source.rs  workspace.rs
lifec/src/project/source/: runmd.rs
lifec/src/project/workspace/: config.rs  operation.rs
lifec/src/runmd/: mod.rs
lifec/src/runtime/: thunk_source.rs
lifec/src/state/: attribute_graph.rs  attribute_index.rs  mod.rs  wire.rs
lifec/src/v2/: cancel.rs  engine.md  engine.rs  event.rs  next.rs
lifec_engine/: Cargo.toml
lifec_engine/src/: engine.rs  lib.rs  operation.rs  plugin.rs  prelude.rs
lifec_poem/: Cargo.toml  README.md
lifec_poem/src/: engine_server.rs  lib.rs  route_plugin.rs  static_files.rs  web_app.rs
src/: catalog.rs  debugger.rs  editor.rs  engine.rs  guest.rs  host.rs  lib.rs  open.rs  operation.rs  prelude.rs  project.rs  resources.rs  runtime.rs  start.rs  trace.rs
src/debugger/: wire.rs
src/editor/: Cargo.toml  appendix.rs  attribute_editor.rs  call.rs  canvas.rs  event_editor.rs  event_graph.rs  event_graph_editor.rs  event_node_editor.rs  exit.rs  file_editor.rs  fix.rs  host_editor.rs  interpret.rs  list.rs  mod.rs  next_button.rs  node.rs  node_editor.rs  node_editor_graph.rs  progress.rs  runtime_editor.rs  section.rs  sequencer.rs  shell.rs  start.rs  start_button.rs  task.rs  timer.rs  workspace_editor.rs
src/editor/_archive/: list.rs  notes.txt  progress.rs
src/editor/appendix/: general.rs  state.rs
src/editor/node/: commands.rs  event.rs  performance.rs  status.rs  wire.rs
src/editor/src/: event_graph_editor.rs  runtime_editor.rs
src/engine/: activity.rs  adhoc.rs  cleanup.rs  completion.rs  connection.rs  cursor.rs  engine_status.rs  engines.rs  event.rs  event_status.rs  events.rs  exit.rs  fork.rs  lifecycle.rs  limit.rs  loop.rs  next.rs  once.rs  performance.rs  plugins.rs  profiler.rs  profilers.rs  repeat.rs  runner.rs  sequence.rs  sequences.rs  state.rs  status.rs  tick_control.rs  transition.rs  yielding.rs
src/engine/performance/: wire.rs
src/engine/plugins/: broker.rs  features.rs  listener.rs
src/engine/sequence/: cursor.rs  start_mode.rs  transition.rs
src/engine/state/: engines.rs  events.rs  guests.rs  operations.rs  plugins.rs  profilers.rs  sequences.rs
src/engine/systems/: mod.rs
src/guest/: monitor.rs  remote_protocol.rs  sender.rs
src/host/: async_ext.rs  commands.rs  control_key.rs  dashboard.rs  editor.rs  executor.rs  guest_runtime.rs  handler.rs  host_settings.rs  inspect.rs  inspector.rs  open.rs  runner.rs  sequencer.rs  start.rs  transport.rs  traverse.rs
src/host/runner/: menu.rs  order.rs  task.rs
src/host/transport/: proxy.rs  test.rs
src/plugins/: attributes.rs  dispatch.rs  enable_networking.rs  expect.rs  install.rs  listen.rs  mod.rs  monitor.rs  open_dir.rs  println.rs  process.rs  publish.rs  readln.rs  remote.rs  request.rs  run.rs  timer.rs  watch.rs  write_file.rs
src/plugins/attributes/: fmt.rs
src/plugins/block/: address.rs  mod.rs  project.rs  transpile.rs
src/project/: completed_plugin_listener.rs  error_context_listener.rs  listener.rs  operation_listener.rs  runmd_listener.rs  source.rs  start_command_listener.rs  status_update_listener.rs  workspace.rs
src/runtime/: event_source.rs  thunk_source.rs
src/state/: attribute_graph.rs  attribute_index.rs  mod.rs  system.rs  v2.rs  wire.rs
src/state/v2/: query.rs  (+2 more)
(+68 files in other folders)
