[package]
name = "lifec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
logos = "0.12.0"

# Add's support for built-in editors
atlier = { git = "https://github.com/juliusl/atlier.git"   }
imnodes = { git = "https://github.com/benmkw/imnodes-rs.git" }
knot = { git = "https://github.com/juliusl/knot.git", branch="main"  }
imgui = "0.8.2" 
specs = { version = "0.17.0", features = ["default", "derive"] }
rand = "0.8.5"
serde = "1.0.137"
chrono = "0.4.19"
serde_json = "1.0.81"
ron = "0.7.0"
base64 = "0.13.0"
tokio = { version = "1.19.2", features = ["default", "rt-multi-thread", "sync", "fs", "process"] }
