[package]
name = "lifec"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# Add's support for built-in editors
atlier = { git = "https://github.com/juliusl/atlier.git", branch="pr/v1" }
imnodes = { git = "https://github.com/benmkw/imnodes-rs.git" }
knot = { git = "https://github.com/juliusl/knot.git", branch="main"  }
imgui = "0.8.2" 
specs = { version = "0.18.0", features = ["default", "derive", "shred-derive"] }
rand = "0.8.5"
serde = "1.0.137"
chrono = "0.4.19"
serde_json = "1.0.81"
ron = "0.7.0"
base64 = "0.13.0"
tokio = { version = "1.19.2", features = ["default", "rt-multi-thread", "sync", "fs", "process", "io-util", "io-std", "macros"] }
hyper-tls = "0.5.0"
hyper = { version = "0.14.20", features = [ "full" ] }
which = "4.2.5"
rust-embed = "6.4.0"
tracing = "0.1.35"
bytemuck = "1.11.0"
tracing-test = "0.2.3"
reality = { version = "0.1.0", path = "../reality" }
logos = "0.12.1"
