[package]
name = "lifec"
version = "1.0.0"
edition = "2021"
resolver = "2"

[features]
default = []
full = ["editor"]
editor = ["atlier", "copypasta", "wgpu", "imgui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# Add's support for built-in editors
# These are for UI feature
atlier = { git = "https://github.com/juliusl/atlier.git", branch="pr/v1", optional = true }
copypasta = { version = "0.8.1", optional = true }
imgui = { version = "0.8.2", optional = true }
wgpu = { version = "0.13.0", optional = true }

# These are for runtime/plugins
reality = { git = "https://github.com/juliusl/reality.git", branch="pr/workspace-refactor" }
specs = { version = "0.18.0", features = ["default", "derive", "shred-derive"] }
rand = "0.8.5"
serde = "1.0.137"
chrono = "0.4.19"
serde_json = "1.0.81"
ron = "0.7.0"
base64 = "0.13.0"
tokio = { version = "1.19.2", features = ["default", "rt-multi-thread", "sync", "fs", "process", "io-util", "io-std", "macros"] }
hyper = { version = "0.14.20", features = [ "full" ] }
hyper-tls = "0.5.0"
which = "4.2.5"
notify = "5.0.0"
rust-embed = "6.4.0"
tracing = "0.1.35"
tracing-test = "0.2.3"
tracing-subscriber = "0.3.15"
bytemuck = "1.11.0"
logos = "0.12.1"
clap = { version = "4.0.4", features = [ "derive" ] }
rsa = "0.7.0"
sha2 = "0.10.6"
signature = "1.6.4"
pkcs8 = { version = "0.9.0", features = [ "encryption" ] }
rpassword = "7.0.0"
hdrhistogram = "7.5.2"

[[example]]
name = "workspace"
required-features = ["editor"]
