[package]
name = "lifec_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "call_async" ]
call_async = [ "async-trait" ]

[dependencies]
anyhow = "1.0.75"
reality = { git = "https://github.com/juliusl/reality.git", branch="pr/v2-v2" }
tokio = "1.32.0"
tokio-util = "0.7.9"
tracing = "0.1.37"

async-trait = { version = "0.1.73", optional = true }
futures-util = "0.3.28"
async-stream = "0.3.5"
uuid = { version = "1.4.1", features = ["v4"] }
tracing-test = { version = "0.2.4" }
