[package]
name = "lifec_poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lifec = { path = "../lifec" }
poem = { version = "1.3.55", features = ["server", "static-files", "native-tls"] }
tokio = "1.19.2"
