[package]
name = "lifec_poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
lifec = { path = "../lifec" }
lifec_engine = { path = "../lifec_engine" }
poem = { version = "1.3.32", features = ["server", "static-files", "native-tls", "test"] }
reality = { git = "https://github.com/juliusl/reality.git", branch="pr/v2-v2" }
tokio = { version = "1.19.2", features = ["default", "signal"] }
tracing = "0.1.37"
tracing-test = "0.2.4"
tokio-util = "0.7.9"
