[package]
name = "lifec_poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
v2 = [ "tracing", "tracing-test", "tokio-util", "reality", "hyper", "hyper-tls", "async-trait", "lifec_engine" ]

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
lifec = { path = "../lifec" }
poem = { version = "1.3.32", features = ["server", "static-files", "native-tls", "test"] }
tokio = { version = "1.19.2", features = ["default", "signal"] }

# V2 Feature
tracing = { version = "0.1.37", optional = true }
tracing-test = { version = "0.2.4", optional = true }
tokio-util = { version = "0.7.9", optional = true }
reality = { git = "https://github.com/juliusl/reality.git", branch="pr/v2-v2", optional = true }
hyper = { version = "0.14.27", optional = true }
hyper-tls = { version = "0.5.0", optional = true }
async-trait = { version = "0.1.74", optional = true }
lifec_engine = { path = "../lifec_engine", optional = true}
