[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compression = "0.1.5"
env_logger = "0.9.0"
imgui = "0.8.2"
lifec = { path = "../.." }
specs = "0.17.0"
tokio = { version = "1.19.2", features = ["full"] }
tracing-subscriber =  { version = "0.3", features = [ "env-filter" ] }
