[package]
name = "event_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlier = { path = "../../../atlier" }
carddeck = { path = "../carddeck" }
lifec = { path = "../..", features = ["editor"] }
