[package]
name = "event_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carddeck = { path = "../carddeck" }
imgui = "0.8.2"
lifec = { path = "../.." }
serde = "1.0.137"
serde_json = "1.0.81"
specs = { version = "0.17.0", features = ["serde"] }
