[package]
name = "event_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carddeck = { path = "../carddeck" }
imgui = "0.8.2"
lifec = { path = "../.." }
rmp-serde = "1.1.0"
ron = "0.7.0"
serde = "1.0.137"
serde_json = "1.0.81"
specs = { version = "0.17.0", features = ["serde"] }
toml = "0.5.9"
