[package]
name = "hilo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlier = { path = "../../../../../atlier" }
carddeck = { path = "../.." }
editor = { path = "../../../../src/editor" }
imgui = "0.8.2"
lifec = { path = "../../../.." }
